# persimmon

./: Cargo.toml
assets/fonts/: PersimmonRegular.sfd
command/: Cargo.toml
command/src/: error.rs  lib.rs  utils.rs
command/src/subcommands/: query.rs
constants/: Cargo.toml
constants/src/: keybinds.rs  lib.rs
creatures/: Cargo.toml
creatures/src/: creature.rs  kind.rs  lib.rs  types.rs
game/: Cargo.toml
game/src/: game.rs  gfx.rs  lib.rs  player.rs  state.rs
gfx/: Cargo.toml
gfx/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs  repl.rs
misc/: Cargo.toml
player/: Cargo.toml
player/src/: lib.rs
scripts/: create-tilemap
ui/: Cargo.toml
ui/src/core/: layout.rs  mod.rs  rect.rs  response.rs  widget.rs
ui/src/widgets/: mod.rs  panel.rs  positioned.rs  text.rs  toggle.rs
world/: Cargo.toml
world/src/: lib.rs  room.rs  tile.rs
