[package]
name = "ui"
version = "0.1.0"
authors = ["Johan-Mi <johanmi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = { path = "../gfx" }
world = { path = "../world" }
sdl2 = { version = "0.34.3", default-features = false, features = ["image"] }
